Added functioning instagram link to all index.html

--- a/index.html
+++ b/index.html
@@ -40,27 +40,31 @@
         <h1 class="start">Theater zur blauen Stunde e.V.</h1>
     </div>
     <header>
+        <div class="hover-box">
+            <img class="flame-in-header" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+            <input id="burger" type="checkbox" />
 
-        <input id="burger" type="checkbox" />
+            <label for="burger">
 
-        <label for="burger">
-            
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
 
-        <nav>
-            <div class="hidetext"></div>
-            <ul>
-                <li><a href="/">start</a></li>
-                <li><a href="/ueber">über uns</a></li>
-                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
-                <li><a href="/kontakt">kontakt</a></li>
-                <li><a href="/datenschutz">datenschutzerklärung</a></li>
-                <li><a href="/impressum">impressum</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <div class="hidetext"></div>
+                <ul>
+                    <li><a href="/">start</a></li>
+                    <li><a href="/ueber">über uns</a></li>
+                    <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                    <li><a href="/kontakt">kontakt</a></li>
+                    <li><a href="/datenschutz">datenschutzerklärung</a></li>
+                    <li><a href="/impressum">impressum</a></li>
+                </ul>
+            </nav>
+        </div>
+
+
     </header>
     <main>
         <div class="start flex flex-justify-center flex-align-center">
@@ -105,16 +109,16 @@
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="">
-                    <img class="social-icons yt"  alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
-                    <img class="social-icons yt gold"  alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_gold.png">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_gold.png">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
-                <a target="_blank" tag="ig-social-icon" href="">
-                    <img class="social-icons ig"  alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
-                    <img class="social-icons ig gold"  alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_gold.png">
+                <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/blaue_stunde_theater/">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_gold.png">
                 </a>
             </div>
 
