--- a/ueber/index.html
+++ b/ueber/index.html
@@ -135,7 +135,7 @@
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
-                <a target="_blank" tag="ig-social-icon" href="">
+                <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/blaue_stunde_theater/">
                     <img class="social-icons ig"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
                     <img class="social-icons ig gold"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
                 </a>
