Outcommented flame-hover.gif on startpage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <header>
         <div class="hover-box">
-            <img class="flame-in-header" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+            <!--<img class="flame-in-header" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">-->
             <input id="burger" type="checkbox" />
 
             <label for="burger">
