Facebook URL updated.

--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -137,7 +137,7 @@
         <div class="icon-bar">
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
-                <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/blauestundetheater/">
+                <a target="_blank" tag="fb-social-icon" href="https://www.facebook.com/theaterzurblauenstunde/">
                     <img class="social-icons fb" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-White_512.png">
                     <img class="social-icons fb gold" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-Gold_512.png">
                 </a>
