"Woran arbeiten wir?" etwas textlich verändert.

--- a/ueber/index.html
+++ b/ueber/index.html
@@ -103,7 +103,8 @@
                     <section>
                         <h2>Woran arbeiten wir?</h2>
                         <p>Wir arbeiten momenten an<br> <span>Aus der Asche - eine Feueroper</span>.
-                            <br> Nachdem wir bereits im November 2019 eine kleine Testaufführung vor Freunden und Familie auf die Beine stellen konnten, peilen wir eine große Aufführung im Sommer 2020 an.
+                            <br> Nachdem wir bereits im November 2019 die Machbarkeit einer musikalischen Feuershow vor Familie und Freunden erproben konnten, wollen wir auf dieser Erfahrung nun aufbauen: <br> das Konzept zu einem abendfüllenden Spektakel ausbauen und im Spätsommer 2020 damit auf der Bühne stehen!<br>
+                            Wir freuen uns auf euch!
                         </p>
                         <div class="flex flex-row flex-justify-end">
                             <a class="btn text-uppercase" tag="projects" href="/aus-der-asche">Mehr über das Projekt</a>
