Relinked YouTube Embed to new Video (new Intro new Outro)

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -70,7 +70,7 @@
     </header>
     <main class="body-margin flex flex-column flex-align-center">
         <section id="trailer" class="flex flex-justify-center">
-            <iframe width="480px" height="240px" src="https://www.youtube.com/embed/wfO-y4nN45c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+            <iframe width="480px" height="240px" src="https://www.youtube.com/embed/ecjxTfrydUI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
         <div class="container flex flex-justify-center flex-align-center flex-wrap">
 
             <article class="flex flex-row flex-align-start flex-justify-center flex-wrap">
