Added YouTube Link

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -142,7 +142,7 @@
 
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
-                <a target="_blank" tag="yt-social-icon" href="">
+                <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
                     <img class="social-icons yt"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
                     <img class="social-icons yt gold"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
                 </a>
