--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -80,8 +80,8 @@
                 <div class="col-txt">
                     <section>
                         <h2>Was ist eine Feueroper?</h2>
-                        <p>“Aus der Asche - eine Feueroper” ist eine musicalhafte Feuershow mit Livemusik und zusammenhängender Handlung, die auf einem antiken Drama beruht - erzählt in über 8 Szenen in atemberaubenden 60 Minuten.<br>
-                            Diese einzigartige Zusammenführung verschiedener Kunstformen ist selbst für eine Stadt wie Berlin mit einer belebten Kunstszene etwas neuartiges.
+                        <p>“Aus der Asche - eine Feueroper” verbindet Feuerspiel mit Live-Musik, akrobatischen Elementen und Schauspiel. Erzählt wird der antike Mythos von Dido und Aeneas in drei Akten. <br>
+                           In dynamischem Wechsel führen die unterschiedlichen Disziplinen durch den Abend. Die Kombination von Feuerjonglage, Flow-Künsten, Live-Musik und Musiktheater hat es in dieser Dimension noch nicht gegeben. Performt wird mit brennenden Schwertern, Reifen, Poi und Stäben verschiedener Länge. Neben Paar- und Ausdruckstanz sind Gruppen-Choreographien, Chorauftritte und Heldenlieder vom Barden Teile des Spektakels. Ethnische und klassische Instrumente verbinden sich mit modernen Musikelementen.
                         </p>
                     </section>
 
