Pressekit in Websitenavigation eingepflegt. ZIP fehlt noch.

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -64,7 +64,7 @@
                 <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
-                <li><a href="/impressum">impressum</a></li>
+                <li><a href="/impressum">impressum & pressekit</a></li>
             </ul>
         </nav>
     </header>
@@ -167,7 +167,7 @@
             <div class="flex flex-row flex-wrap">
                 <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
                 <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
-                <p class="impressum"><a href="/impressum">Impressum</a></p>
+                <p class="impressum"><a href="/impressum">impressum & pressekit</a></p>
             </div>
         </div>
     </footer>
