--- a/impressum/index.html
+++ b/impressum/index.html
@@ -63,37 +63,70 @@
                 <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
-                <li><a href="/impressum">impressum</a></li>
+                <li><a href="/impressum">impressum & pressekit</a></li>
             </ul>
         </nav>
     </header>
-    <main class="contact body-margin flex flex-column flex-align-center" flex-justify-center>
+    <main class="contact body-margin flex flex-column flex-align-center flex-justify-center">
+        <div class="container flex-column">
+            <section id="impressum">
+                <article>
 
-        <article class="body-margin">
-            <h3>Anschrift</h3>
-            <p>Theater zur blauen Stunde e.V.<br>
-                Julian Allescher<br>
-                Kiefholzstr.188<br>
-                12437 Berlin<br></p>
-            <h3>Kontakt</h3>
-            <p>Tel.: +4916091076324<br>
-                <a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a>
-            </p>
-            <h3>Zuständiges Vereinsregister</h3>
-            <p>Amtsgericht Charlottenburg<br>
-                Amtsgerichtplatz 1<br>
-                14057 Berlin</p>
-            <p>Registernummer: VR 37647 B</p>
-            <h3>Vereinsvorstand</h3>
-            <p>Julian Allescher<br>
-                Friederike Großmann<br>
-                Anna Shaposhnik<br>
-                Corinna Storbeck<br>
-                Nico Westerbeck</p>
-        </article>
+                    <div class="col-txt">
+                        <h2> Impressum</h2>
+                    </div>
+                    <div class="flex flex-row flex-wrap flex-justify-between width-full">
+                        <div class="col-imprint">
+                            <h3>Anschrift</h3>
+                            <p>Theater zur blauen Stunde e.V.<br>
+                                Julian Allescher<br>
+                                Kiefholzstr.188<br>
+                                12437 Berlin<br></p>
+                        </div>
+                        <div class="col-imprint">
+                            <h3>Kontakt</h3>
+                            <p>Tel.: +4916091076324<br>
+                                <a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a>
+                            </p>
+                        </div>
+                        <div class="col-imprint">
+                            <h3>Vereinsregister</h3>
+                            <p>Amtsgericht Charlottenburg<br>
+                                Amtsgerichtplatz 1<br>
+                                14057 Berlin</p>
+                            <p>Registernummer: VR 37647 B</p>
+                        </div>
+                        <div class="col-imprint">
+                            <h3>Vereinsvorstand</h3>
+                            <p>Julian Allescher<br>
+                                Friederike Großmann<br>
+                                Anna Shaposhnik<br>
+                                Corinna Storbeck<br>
+                                Nico Westerbeck</p>
+                        </div>
+                    </div>
+
+                </article>
+            </section>
+            <section id="pressekit">
+                <article class="flex flex-row flex-wrap">
+                    <div class="container">
+                        <h2>Pressekit</h2>
+
+                        <p>Daten, Logos, Fotos, Videos, Pressemitteilung.</p>
+
+                        <div class="flex flex-row flex-justify-end">
+                            <a class="btn text-uppercase" tag="projects" href="">↓ Download (50MB)</a>
+                        </div>
+                    </div>
+
+                </article>
+            </section>
+            
+        </div>
         <hr>
     </main>
-<footer class="flex flex-column flex-align-center">
+    <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
@@ -106,16 +139,16 @@
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
-                    <img class="social-icons yt"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
-                    <img class="social-icons yt gold"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/theaterzurblauenstunde/">
-                    <img class="social-icons ig"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
-                    <img class="social-icons ig gold"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
                 </a>
             </div>
 
@@ -129,7 +162,7 @@
             <div class="flex flex-row flex-wrap">
                 <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
                 <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
-                <p class="impressum"><a href="/impressum">Impressum</a></p>
+                <p class="impressum"><a href="/impressum">impressum & pressekit</a></p>
             </div>
         </div>
     </footer>
