--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -64,16 +64,19 @@
                 <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
-                <li><a href="/impressum">impressum</a></li>
+                <li><a href="/impressum">impressum & pressekit</a></li>
             </ul>
         </nav>
     </header>
     <main class="contact body-margin flex flex-column flex-align-center" flex-justify-center>
         <article class="contact">
-            <p>Du möchtest gerne Mitglied in unserem Verein werden?
-                <br>Oder hättest du gerne eine Feuershow auf deiner eigenen Veranstaltung?
-                <br>Oder möchtest du einfach Kritik, Lob oder deinen Hass loswerden?
-                <br><span>Wir freuen uns auf deine Nachricht!</span></p>
+            <div class="container">
+                <p>Du möchtest gerne Mitglied in unserem Verein werden?
+                    <br>Oder hättest du gerne eine Feuershow auf deiner eigenen Veranstaltung?
+                    <br>Oder möchtest du einfach Kritik, Lob oder deinen Hass loswerden?
+                    <br><span>Wir freuen uns auf deine Nachricht!</span></p>
+            </div>
+
         </article>
 
         <!--<article class="form">
@@ -111,14 +114,17 @@
         </article>-->
 
         <article class="socialmedia">
-            <p>Schreibe uns gerne unter: <br><a href="mail@blauestunde.theater"><span>mail@blauestunde.theater</span></a>
-                <br>
-                <br>Oder statte unseren sozialen Kanälen doch mal einen Besuch ab!<br>
-                Mögen die Flammen euch gewogen sein!</p>
+            <div class="container">
+                <p>Schreibe uns gerne unter: <br><a href="mail@blauestunde.theater"><span>mail@blauestunde.theater</span></a>
+                    <br>
+                    <br>Oder statte unseren sozialen Kanälen doch mal einen Besuch ab!<br>
+                    Mögen die Flammen euch gewogen sein!</p>
+            </div>
+
         </article>
         <hr>
     </main>
-   <footer class="flex flex-column flex-align-center">
+    <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
@@ -131,16 +137,16 @@
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
-                    <img class="social-icons yt"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
-                    <img class="social-icons yt gold"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/theaterzurblauenstunde/">
-                    <img class="social-icons ig"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
-                    <img class="social-icons ig gold"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
                 </a>
             </div>
 
@@ -154,7 +160,7 @@
             <div class="flex flex-row flex-wrap">
                 <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
                 <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
-                <p class="impressum"><a href="/impressum">Impressum</a></p>
+                <p class="impressum"><a href="/impressum">impressum & pressekit</a></p>
             </div>
         </div>
     </footer>
