Pressekit.zip hinzugefügt.

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -113,10 +113,10 @@
                     <div class="container">
                         <h2>Pressekit</h2>
 
-                        <p>Daten, Logos, Fotos, Videos, Pressemitteilung.</p>
+                        <p>Daten, Logos, Fotos, Pressemitteilung, Künstlerische Biografien.</p>
 
                         <div class="flex flex-row flex-justify-end">
-                            <a class="btn text-uppercase" tag="projects" href="">↓ Download (50MB)</a>
+                            <a class="btn text-uppercase" tag="projects" href="tzbs_aus-der-asche_pressekit.zip">↓ Download (23MB)</a>
                         </div>
                     </div>
 
