--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li><a href="/">start</a></li>
                     <li><a href="/ueber">über uns</a></li>
                     <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                    <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                     <li><a href="/kontakt">kontakt</a></li>
                     <li><a href="/datenschutz">datenschutzerklärung</a></li>
                     <li><a href="/impressum">impressum & pressekit</a></li>
