--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -62,6 +62,7 @@
                 <li><a href="/">start</a></li>
                 <li><a href="/ueber">über uns</a></li>
                 <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
                 <li><a href="/impressum">impressum & pressekit</a></li>
@@ -82,7 +83,7 @@
                         <h2>Was ist eine Feueroper?</h2>
                         <p>“Aus der Asche - eine Feueroper” verbindet Feuerspiel mit Live-Musik, akrobatischen Elementen und Schauspiel. Erzählt wird der antike Mythos von Dido und Aeneas in drei Akten. <br></p>
                         <p>
-                           In dynamischem Wechsel führen die unterschiedlichen Disziplinen durch den Abend. Die Kombination von Feuerjonglage, Flow-Künsten, Live-Musik und Musiktheater hat es in dieser Dimension noch nicht gegeben. Performt wird mit brennenden Schwertern, Reifen, Poi und Stäben verschiedener Länge. Neben Paar- und Ausdruckstanz sind Gruppen-Choreographien, Chorauftritte und Heldenlieder vom Barden Teile des Spektakels. Ethnische und klassische Instrumente verbinden sich mit modernen Musikelementen.
+                            In dynamischem Wechsel führen die unterschiedlichen Disziplinen durch den Abend. Die Kombination von Feuerjonglage, Flow-Künsten, Live-Musik und Musiktheater hat es in dieser Dimension noch nicht gegeben. Performt wird mit brennenden Schwertern, Reifen, Poi und Stäben verschiedener Länge. Neben Paar- und Ausdruckstanz sind Gruppen-Choreographien, Chorauftritte und Heldenlieder vom Barden Teile des Spektakels. Ethnische und klassische Instrumente verbinden sich mit modernen Musikelementen.
                         </p>
                     </section>
 
@@ -131,7 +132,7 @@
         </div>
         <hr>
     </main>
-   <footer class="flex flex-column flex-align-center">
+    <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
             <div class="icon">
                 <img class="flame-hover fb" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
@@ -144,16 +145,16 @@
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
-                    <img class="social-icons yt"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
-                    <img class="social-icons yt gold"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/theaterzurblauenstunde/">
-                    <img class="social-icons ig"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
-                    <img class="social-icons ig gold"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
                 </a>
             </div>
 
