--- a/ueber/index.html
+++ b/ueber/index.html
@@ -62,6 +62,7 @@
                 <li><a href="/">start</a></li>
                 <li><a href="/ueber">über uns</a></li>
                 <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/tickets">🔥 Tickets 🔥</a></li>
                 <li><a href="/kontakt">kontakt</a></li>
                 <li><a href="/datenschutz">datenschutzerklärung</a></li>
                 <li><a href="/impressum">impressum & pressekit</a></li>
@@ -86,10 +87,10 @@
                                 <li>indem diese sich in der Arbeit ergänzen sowie bei Bedarf und Wunsch untereinander in kostenfreien Workshops weitergegeben werden.</li>
                             </ul>
                             <br>Die Tätigkeit im Verein soll erfahrbar machen, dass bedeutsame Werke der Kunst und Kultur auch ohne kommerzielle Beweggründe von Menschen für Menschen geschaffen werden können.
-                       
-                        <div class="flex flex-row flex-justify-end">
-                            <a class="btn text-uppercase" tag="projects" href="/kontakt">Mitmachen!</a>
-                        </div>
+
+                            <div class="flex flex-row flex-justify-end">
+                                <a class="btn text-uppercase" tag="projects" href="/kontakt">Mitmachen!</a>
+                            </div>
                     </section>
 
                 </div>
@@ -129,16 +130,16 @@
             <div class="icon">
                 <img class="flame-hover yt" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="yt-social-icon" href="https://www.youtube.com/channel/UC4h5-kpujSkzAW2fv-g0sXw">
-                    <img class="social-icons yt"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
-                    <img class="social-icons yt gold"  alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
+                    <img class="social-icons yt" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
+                    <img class="social-icons yt gold" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_gold.png">
                 </a>
             </div>
 
             <div class="icon">
                 <img class="flame-hover ig" alt="flame-hover" src="../assets/img/gifs/Flamme_Icon_Hover.gif">
                 <a target="_blank" tag="ig-social-icon" href="https://www.instagram.com/theaterzurblauenstunde/">
-                    <img class="social-icons ig"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
-                    <img class="social-icons ig gold"  alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
+                    <img class="social-icons ig" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
+                    <img class="social-icons ig gold" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_gold.png">
                 </a>
             </div>
 
