Link zu Kino-Union angepasst, weil sonst problematisch auf iPhone zu öffnen.

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -115,7 +115,7 @@
                         <p class="datum">Samstag, 26.September 2020</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://www.kino-union.de/ticket?l=https%3A%2F%2Fbooking.cinetixx.de%2Ffrontend%2Findex.html%3FcinemaId%3D1538288592%26showId%3D2296331873%26bgswitch%3Dfalse"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331873&bgswitch=false#/eventList/1538288592/event/2296331873"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                         <p class="datum">Sonntag, 27.September 2020</p>
                     </div>
                     <div class="ticket-col flex flex-column flex-justify-center flex-align-end">
-                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://www.kino-union.de/ticket?l=https%3A%2F%2Fbooking.cinetixx.de%2Ffrontend%2Findex.html%3FcinemaId%3D1538288592%26showId%3D2296331881%26bgswitch%3Dfalse"><i class="fa fa-ticket"></i> Tickets</a></div>
+                        <div><a target="_blank" class="btn text-uppercase" tag="tickets" href="https://booking.cinetixx.de/frontend/index.html?cinemaId=1538288592&showId=2296331881&bgswitch=false#/eventList/1538288592/event/2296331881"><i class="fa fa-ticket"></i> Tickets</a></div>
                     </div>
                 </div>
             </div>
