Kontakt- und Datenschutzseite gefixt

--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -71,13 +71,14 @@
         </nav>
     </header>
     <main class="contact body-margin flex flex-column flex-align-center flex-justify-center">
+        <div class="container">
         <article>
 
 
             <p><strong>Allgemeiner Hinweis und Pflichtinformationen</strong></p>
             <p><strong>Benennung der verantwortlichen Stelle</strong></p>
             <p>Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website ist:</p>
-            <p><span id="s3-t-firma">Theater zur blauen Stunde e.V.</span><br><span id="s3-t-ansprechpartner">Julian Allescher</span><br><span id="s3-t-strasse">Kiefholzstraße 188</span><br><span id="s3-t-plz">12437</span> <span id="s3-t-ort">Berlin</span></p>
+            <p><span id="s3-t-firma">Theater zur blauen Stunde e.V.</span><br><span id="s3-t-ansprechpartner">c/o Julian Allescher</span><br><span id="s3-t-strasse">Kiefholzstraße 188</span><br><span id="s3-t-plz">12437</span> <span id="s3-t-ort">Berlin</span></p>
             <p></p>
             <p>Die verantwortliche Stelle entscheidet allein oder gemeinsam mit anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.B. Namen, Kontaktdaten o. Ä.).</p>
 
@@ -133,6 +134,7 @@
             <p><small>Quelle: Datenschutz-Konfigurator von <a href="http://www.mein-datenschutzbeauftragter.de" target="_blank">mein-datenschutzbeauftragter.de</a></small></p>
         </article>
         <hr>
+            </div>
     </main>
     <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
