Added Ticket Buttons to Aus-der-Asche-Page

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../assets/CSS/burger.css">
     <link rel="stylesheet" href="../assets/CSS/text-flex.css">
     <link rel="stylesheet" href="../assets/CSS/styles.css">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Abel|Josefin+Sans|Muli|Quicksand|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
 
@@ -85,6 +86,9 @@
                         <p>
                             In dynamischem Wechsel führen die unterschiedlichen Disziplinen durch den Abend. Die Kombination von Feuerjonglage, Flow-Künsten, Live-Musik und Musiktheater hat es in dieser Dimension noch nicht gegeben. Performt wird mit brennenden Schwertern, Reifen, Poi und Stäben verschiedener Länge. Neben Paar- und Ausdruckstanz sind Gruppen-Choreographien, Chorauftritte und Heldenlieder vom Barden Teile des Spektakels. Ethnische und klassische Instrumente verbinden sich mit modernen Musikelementen.
                         </p>
+                        <div class="flex flex-row flex-justify-end">
+                            <a class="btn btn-highlight text-uppercase" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
+                        </div>
                     </section>
 
                 </div>
@@ -111,6 +115,9 @@
                             Die Göttermutter Hera möchte es genauer wissen und stößt den Lauf der Geschichte auf eigene Faust an - Aeneas trifft auf Dido, Herrscherin Karthagos. Doch wissen beide, dass jenes Karthago einst von Rom zerstört werden wird?<br>
                             Ein wilder Tanz zwischen Menschen, Göttern, Leben, Tod, Pflicht, Neigung, Schicksal, Selbstbestimmung und einer blendenden Verheißung entbrennt...
                         </p>
+                        <div class="flex flex-row flex-justify-end">
+                            <a class="btn btn-highlight text-uppercase" tag="projects" href="/tickets"><i class="fa fa-ticket"></i> Tickets</a>
+                        </div>
                     </section>
 
                 </div>
